okd/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issue-tracker-api
  labels:
    app: issue-tracker-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issue-tracker-api
  template:
    metadata:
      labels:
        app: issue-tracker-api
    spec:
      containers:
        - name: issue-tracker-api
          image: matomaniaco/issue-tracker-images:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: certs-volume
              mountPath: "/app/certs" 
              readOnly: true
      volumes:
        - name: certs-volume
          secret:
            secretName: github-app-key
