okd/db-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: issue-tracker-db
spec:
  podManagementPolicy: Parallel
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: issue-tracker-db
  serviceName: issue-tracker-db
  template:
    metadata:
      labels:
        app: issue-tracker-db
    spec:
      containers:
        - name: issue-tracker-db
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: issue-tracker-db
  volumeClaimTemplates:
    - metadata:
        name: issue-tracker-db
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
